<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lime"
    android:padding="20dp"
    tools:context=".Result">

    <ImageView
        android:id="@+id/ribbontemp"
        android:src="@drawable/group_43"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/rewardpoint"
        android:src="@drawable/group_40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="130dp"
        app:layout_constraintTop_toTopOf="@id/ribbontemp"
        android:layout_width="wrap_content"
        android:layout_height="0dp" />

    <TextView
        android:id="@+id/congratstxt"
        android:text="@string/tv_congratstxt"
        android:fontFamily="@font/krona_one"
        android:textSize="28sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/rewardpoint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/motivation1"
        android:text="@string/tv_motivation1"
        style="@style/motivationword"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/congratstxt"
        app:layout_constraintStart_toStartOf="@id/ribbontemp"
        app:layout_constraintEnd_toEndOf="@id/ribbontemp"/>

    <TextView
        android:id="@+id/motivation2"
        android:text="@string/tv_motivation2"
        style="@style/motivationword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/motivation1"
        app:layout_constraintStart_toStartOf="@id/ribbontemp"
        app:layout_constraintEnd_toEndOf="@id/ribbontemp"/>

</androidx.constraintlayout.widget.ConstraintLayout>